--- a/SharpScan.Core/SharpScan.Core.csproj
+++ b/SharpScan.Core/SharpScan.Core.csproj
@@ -32,5 +32,9 @@
 	  <WarningLevel>0</WarningLevel>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <Folder Include="Resources\" />
+	</ItemGroup>
+
 
 </Project>
