--- a/SharpScan/SharpScan.csproj
+++ b/SharpScan/SharpScan.csproj
@@ -78,31 +78,31 @@
     <Compile Include="Helper\SSH\DiffieHellman.cs" />
     <Compile Include="Helper\SSH\DiffieHellmanManaged.cs" />
     <Compile Include="Helper\SSH\ITransferProtocol.cs" />
-    <Compile Include="Helper\SSH\java\Exception.cs" />
-    <Compile Include="Helper\SSH\java\io\File.cs" />
-    <Compile Include="Helper\SSH\java\io\FileInputStream.cs" />
-    <Compile Include="Helper\SSH\java\io\FileOutputStream.cs" />
-    <Compile Include="Helper\SSH\java\io\InputStream.cs" />
-    <Compile Include="Helper\SSH\java\io\InputStreamWrapper.cs" />
-    <Compile Include="Helper\SSH\java\io\JStream.cs" />
-    <Compile Include="Helper\SSH\java\io\OutputStream.cs" />
-    <Compile Include="Helper\SSH\java\lang\Class.cs" />
-    <Compile Include="Helper\SSH\java\lang\Integer.cs" />
-    <Compile Include="Helper\SSH\java\lang\Runnable.cs" />
-    <Compile Include="Helper\SSH\java\lang\StringBuffer.cs" />
-    <Compile Include="Helper\SSH\java\lang\Thread.cs" />
-    <Compile Include="Helper\SSH\java\net\InetAddress.cs" />
-    <Compile Include="Helper\SSH\java\net\ServerSocket.cs" />
-    <Compile Include="Helper\SSH\java\net\Socket.cs" />
-    <Compile Include="Helper\SSH\java\Platform.cs" />
-    <Compile Include="Helper\SSH\java\RuntimeException.cs" />
-    <Compile Include="Helper\SSH\java\String.cs" />
-    <Compile Include="Helper\SSH\java\System.cs" />
-    <Compile Include="Helper\SSH\java\util\Arrays.cs" />
-    <Compile Include="Helper\SSH\java\util\Enumeration.cs" />
-    <Compile Include="Helper\SSH\java\util\Hashtable.cs" />
-    <Compile Include="Helper\SSH\java\util\JavaString.cs" />
-    <Compile Include="Helper\SSH\java\util\Vector.cs" />
+    <Compile Include="Helper\SSH\System\Exception.cs" />
+    <Compile Include="Helper\SSH\System\io\File.cs" />
+    <Compile Include="Helper\SSH\System\io\FileInputStream.cs" />
+    <Compile Include="Helper\SSH\System\io\FileOutputStream.cs" />
+    <Compile Include="Helper\SSH\System\io\InputStream.cs" />
+    <Compile Include="Helper\SSH\System\io\InputStreamWrapper.cs" />
+    <Compile Include="Helper\SSH\System\io\JStream.cs" />
+    <Compile Include="Helper\SSH\System\io\OutputStream.cs" />
+    <Compile Include="Helper\SSH\System\lang\Class.cs" />
+    <Compile Include="Helper\SSH\System\lang\Integer.cs" />
+    <Compile Include="Helper\SSH\System\lang\Runnable.cs" />
+    <Compile Include="Helper\SSH\System\lang\StringBuffer.cs" />
+    <Compile Include="Helper\SSH\System\lang\Thread.cs" />
+    <Compile Include="Helper\SSH\System\net\InetAddress.cs" />
+    <Compile Include="Helper\SSH\System\net\ServerSocket.cs" />
+    <Compile Include="Helper\SSH\System\net\Socket.cs" />
+    <Compile Include="Helper\SSH\System\Platform.cs" />
+    <Compile Include="Helper\SSH\System\RuntimeException.cs" />
+    <Compile Include="Helper\SSH\System\String.cs" />
+    <Compile Include="Helper\SSH\System\System.cs" />
+    <Compile Include="Helper\SSH\System\util\Arrays.cs" />
+    <Compile Include="Helper\SSH\System\util\Enumeration.cs" />
+    <Compile Include="Helper\SSH\System\util\Hashtable.cs" />
+    <Compile Include="Helper\SSH\System\util\JavaString.cs" />
+    <Compile Include="Helper\SSH\System\util\Vector.cs" />
     <Compile Include="Helper\SSH\jsch\Buffer.cs" />
     <Compile Include="Helper\SSH\jsch\Channel.cs" />
     <Compile Include="Helper\SSH\jsch\Channel.old.cs" />
