--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -29,7 +29,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NET_4_5;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Management.Automation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Windows\assembly\GAC_MSIL\System.Management.Automation\1.0.0.0__31bf3856ad364e35\System.Management.Automation.dll</HintPath>
@@ -49,6 +50,88 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System.Threading.Tasks35\StreamExtensions.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent.Partitioners\EnumerablePartitioner.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent.Partitioners\ListPartitioner.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent.Partitioners\UserRangePartitioner.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent\BlockingCollection.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent\ConcurrentBag.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent\ConcurrentDictionary.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent\ConcurrentOrderedList.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent\ConcurrentQueue.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent\ConcurrentStack.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent\IProducerConsumerCollection.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent\OrderablePartitioner.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent\Partitioner.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Concurrent\SplitOrderedList.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Generic\CollectionDebuggerView.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Generic\DefaultEqualityComparer.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections.Generic\GenericEqualityComparer.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections\IStructuralComparable.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Collections\IStructuralEquatable.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Diagnostics\CodeAnalysis.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\AsyncStateMachineAttribute.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\AsyncTaskMethodBuilder.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\AsyncTaskMethodBuilder_T.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\AsyncVoidMethodBuilder.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\ConfiguredTaskAwaitable.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\ConfiguredTaskAwaitable_T.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\IAsyncStateMachine.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\ICriticalNotifyCompletion.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\INotifyCompletion.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\StateMachineAttribute.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\TaskAwaiter.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\TaskAwaiter_T.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.CompilerServices\YieldAwaitable.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.ExceptionServices\ExceptionDispatchInfo.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Runtime.Remoting.Messaging\AsyncResult.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\CyclicDeque.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\IConcurrentDeque.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\PopResult.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\SynchronizationContextScheduler.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\Task.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskActionInvoker.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskCanceledException.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskCompletionQueue.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskCompletionSource.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskConstants.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskConstants_T.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskContinuation.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskContinuationOptions.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskCreationOptions.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskDebuggerView.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskExceptionSlot.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskExtensions.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskExtensionsImpl.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskFactory.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskFactory_T.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskScheduler.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskSchedulerException.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TaskStatus.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\Task_T.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\TpScheduler.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading.Tasks\UnobservedTaskExceptionEventArgs.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\AtomicBoolean.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\CancellationToken.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\CancellationTokenRegistration.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\CancellationTokenSource.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\CountdownEvent.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\ManualResetEventSlim.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\SemaphoreSlim.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\SpinLock.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\SpinWait.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\ThreadingHelper.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\ThreadingHelper.SpinWait.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\Volatile.cs" />
+    <Compile Include="System.Threading.Tasks35\System.Threading\Watch.cs" />
+    <Compile Include="System.Threading.Tasks35\System\AggregateException.cs" />
+    <Compile Include="System.Threading.Tasks35\System\Funcs.cs" />
+    <Compile Include="System.Threading.Tasks35\System\Lazy.cs" />
+    <Compile Include="System.Threading.Tasks35\System\LazyThreadSafetyMode.cs" />
+    <Compile Include="System.Threading.Tasks35\System\LocalDataStoreSlot.cs" />
+    <Compile Include="System.Threading.Tasks35\System\OperationCanceledException.cs" />
+    <Compile Include="System.Threading.Tasks35\System\Tuple.cs" />
+    <Compile Include="System.Threading.Tasks35\System\Tuples.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
