--- a/SharpScan.Core/SharpScan.Core.csproj
+++ b/SharpScan.Core/SharpScan.Core.csproj
@@ -32,7 +32,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="Resources\" />
+	  <Compile Remove="Resources\**" />
+	  <EmbeddedResource Remove="Resources\**" />
+	  <None Remove="Resources\**" />
 	</ItemGroup>
 
 	<ItemGroup>
