--- a/SharpScan/SharpScan.csproj
+++ b/SharpScan/SharpScan.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -293,7 +294,8 @@
     <Compile Include="Plugins\FileSearch.cs" />
     <Compile Include="Plugins\Ftp.cs" />
     <Compile Include="Plugins\MsSql.cs" />
-    <Compile Include="Plugins\Mysql.cs" />
+    <Compile Include="Plugins\MySql.cs" />
+    <Compile Include="Plugins\HttpServer.cs" />
     <Compile Include="Plugins\Socks5.cs" />
     <Compile Include="Mono.Options\Options.cs" />
     <Compile Include="Common\CheckIP.cs" />
@@ -301,6 +303,7 @@
     <Compile Include="Plugins\Domain.cs" />
     <Compile Include="Plugins\MS17-010.cs" />
     <Compile Include="Plugins\SMBGhost.cs" />
+    <Compile Include="Plugins\WmiExec.cs" />
     <Compile Include="Scan\UdpPortScan.cs" />
     <Compile Include="Plugins\ZeroLogon.cs" />
     <Compile Include="Plugins\Rdp.cs" />
